--- a/sites/vrlfp.net/_kwerc/css/style.css
+++ b/sites/vrlfp.net/_kwerc/css/style.css
@@ -143,7 +143,7 @@ button, .btn {
     cursor: pointer;
     transition: background-color 0.2s ease-out;
 }
-button:hover, .btn:hover {
+button:hover:enabled, .btn:hover {
     background-color: #e7ffff;
     box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14),
                 0 1px 7px 0 rgba(0, 0, 0, 0.12),
@@ -152,6 +152,11 @@ button:hover, .btn:hover {
 button:focus, .btn:focus {
     background-color: #81ccc4;
 }
+button:disabled {
+    background-color: #e4e4e4 !important;
+    cursor: default;
+}
+
 
 input:not(.unstyled), textarea {
     margin: 8px 0 4px 0;
@@ -188,6 +193,10 @@ input:not([type="checkbox"]):focus + label, textarea:focus + label {
     color: #b3fff7;
 }
 
+[type="image"] {
+    display: inline;
+}
+
 ul {
     padding: 0;
     border: 1px solid #e0e0e0;
@@ -220,7 +229,7 @@ li span, [type="checkbox"]:not(.unstyled) + label {
 li p {
     margin: 0 0 8px 0;
 }
-[type="checkbox"]:not(.unstyled) + label {
+[type="checkbox"]:not(.unstyled):enabled + label {
     cursor: pointer;
 }
 [type="checkbox"]:not(.unstyled):first-of-type + label {
@@ -310,7 +319,10 @@ li p {
                 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .card img {
-    width: 100%;
+    max-width: 100%;
+}
+input.card {
+    padding: 0;
 }
 
 .sitemap-list {
